WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32201
SVG radialGradient example radial-gradient-with-outstanding-focalPoint.svg fails
https://bugs.webkit.org/show_bug.cgi?id=32201
Summary
SVG radialGradient example radial-gradient-with-outstanding-focalPoint.svg fails
Dirk Schulze
Reported
2009-12-06 13:24:04 PST
SVG radialGradient example radial-gradient-with-outstanding-focalPoint.svg fails. Maily because Cg doesn't handle focalPoint on radius of the gradient correctly.
Attachments
Fix radial gradient in SVG
(236.74 KB, patch)
2010-01-11 14:26 PST
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2009-12-18 23:43:53 PST
***
Bug 32764
has been marked as a duplicate of this bug. ***
Dirk Schulze
Comment 2
2009-12-18 23:45:38 PST
Actual it's not a regression Niko. It never worked.
Dirk Schulze
Comment 3
2010-01-11 14:26:48 PST
Created
attachment 46309
[details]
Fix radial gradient in SVG Fix radial gradients in SVG by moving the focalpoint into the circle, defined by the gradients central point ans radius. We take a radius of 0.99*r to identify these focalPoints, to match the behavior of FF.
Nikolas Zimmermann
Comment 4
2010-01-11 15:07:56 PST
Comment on
attachment 46309
[details]
Fix radial gradient in SVG LGTM, r=me. One step further for a clean SVG baseline on Mac again :-)
WebKit Commit Bot
Comment 5
2010-01-11 15:41:20 PST
Comment on
attachment 46309
[details]
Fix radial gradient in SVG Clearing flags on attachment: 46309 Committed
r53106
: <
http://trac.webkit.org/changeset/53106
>
WebKit Commit Bot
Comment 6
2010-01-11 15:41:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug