2010-01-11  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVG radialGradient example radial-gradient-with-outstanding-focalPoint.svg fails
        https://bugs.webkit.org/show_bug.cgi?id=32201

        * platform/mac/svg/W3C-SVG-1.1/pservers-grad-13-b-expected.checksum:
        * platform/mac/svg/W3C-SVG-1.1/pservers-grad-13-b-expected.png:
        * platform/mac/svg/custom/radial-gradient-with-outstanding-focalPoint-expected.checksum:
        * platform/mac/svg/custom/radial-gradient-with-outstanding-focalPoint-expected.png:
2010-01-11  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG radialGradient example radial-gradient-with-outstanding-focalPoint.svg fails
        https://bugs.webkit.org/show_bug.cgi?id=32201

        This patch moves every focalPoint that lies outside the circle defined by the radial
        gradients central point and its radius to stay inside this circle, as demanded by the
        SVG 1.1 specification.
        We use r * 0.99 as maximum radius for the aforementioned circle, when determining where
        the focalPoint is lying, to achieve compatibility with Firefox.

        * svg/SVGRadialGradientElement.cpp:
        (WebCore::SVGRadialGradientElement::buildGradient):

Canonical link: https://commits.webkit.org/44514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53106 268f45cc-cd09-0410-ab3c-d52691b4dbfc