WebCore/svg/SVGRadialGradientElement.cpp
@@ -108,29 +108,17 @@ void SVGRadialGradientElement::buildGradient() const
     FloatPoint adjustedFocalPoint = focalPoint;
     float dfx = focalPoint.x() - centerPoint.x();
     float dfy = focalPoint.y() - centerPoint.y();
+    float rMax = 0.99f * radius;
 
     // Spec: If (fx, fy) lies outside the circle defined by (cx, cy) and
     // r, set (fx, fy) to the point of intersection of the line through
     // (fx, fy) and the circle.
-    if (sqrt(dfx * dfx + dfy * dfy) >= radius) {
-        float angle = atan2f(dfx, dfy);
+    // We scale the radius by 0.99 to match the behavior of FireFox.
+    if (sqrt(dfx * dfx + dfy * dfy) > rMax) {
+        float angle = atan2f(dfy, dfx);
 
-        // The maximum deviation of 0.2% is needed on Cairo, since Cairo
-        // is working with fixed point numbers.
-#if PLATFORM(CAIRO)
-        if (focalPoint.x() < centerPoint.x())
-            dfx = cosf(angle) * radius + 0.002f;
-        else
-            dfx = cosf(angle) * radius - 0.002f;
-        if (focalPoint.y() < centerPoint.y())
-            dfy = sinf(angle) * radius + 0.002f;
-        else
-            dfy = sinf(angle) * radius - 0.002f;
-#else
-        dfx = cosf(angle) * radius;
-        dfy = sinf(angle) * radius;
-#endif
-
+        dfx = cosf(angle) * rMax;
+        dfy = sinf(angle) * rMax;
         adjustedFocalPoint = FloatPoint(dfx + centerPoint.x(), dfy + centerPoint.y());
     }
 
